--- a/index.html
+++ b/index.html
@@ -42,21 +42,23 @@
           <div class="header-line"></div>
           <div class="header"></div>
           <h1> 초대합니다. </h1>
-          <p style="top: 50%">
-          조심스럽게 시작했던 작은 사랑이<br>
-          어느덧 한 평생 함께할 약속이 되었습니다.<br>
-          저희의 특별한 시작을 함께해주세요.
-          </p>
-          <div class="introducePerson" style="top: 70%; left: 50%;">
-            <div>
-              <span>(故)홍성오, 유문숙 </span>
-              <small>의 장남 </small>
-              <span>은기</span>
-            </div>
-            <div>
-              <span>이재준, 한승혜 </span>
-              <small>의 차녀 </small>
-              <span>정민</span>
+          <div class="content-box">
+            <p style="padding: 5%">
+            조심스럽게 시작했던 작은 사랑이<br>
+            어느덧 한 평생 함께할 약속이 되었습니다.<br>
+            저희의 특별한 시작을 함께해주세요.
+            </p>
+            <div class="introducePerson", style="padding: 5%">
+              <div>
+                <span>(故)홍성오, 유문숙 </span>
+                <small>의 장남 </small>
+                <span>은기</span>
+              </div>
+              <div>
+                <span>이재준, 한승혜 </span>
+                <small>의 차녀 </small>
+                <span>정민</span>
+              </div>
             </div>
           </div>
           <div class="footer"></div>
@@ -70,12 +72,11 @@
             <div class="header"></div>
 
             <h1>날짜</h1>
-            <div class="2024_July" style="width: 94px; height: 23px; left: 134px; top: 236px; position: relative; text-align: center; color: black; font-size: 17px; font-family: Noto Serif KR; font-weight: 400; word-wrap: break-word">2024. 07</div>
-
-            <div class="Ellipse1" style="width: 24px; height: 23px; left: 267px; top: 333px; position: relative; background: #0F0F3F; border-radius: 9999px"></div>
             <div class="rect">
+              <div class="2024_July" style="position: relative; text-align: center; color: black; font-size: 27px; font-family: Italianno; font-weight: 400; word-wrap: break-word; padding-bottom: 30px;">2024. 07</div>
               <div class="calendar"></div>
             </div>
+
             <div class="footer"></div>
           </div>
 
@@ -138,12 +139,12 @@
             <div class="header"></div>
             <h1>오시는 길</h1>
 
-            <div class="how-to-come">
-              <span>삼성전자 서초사옥 웨딩홀<br>서울 서초구 서초대로74길 11 삼성전자빌딩 5층</span>
-              <br><br>
+            <div class="content-box">
+              <div class="how-to-come">
+                <span>삼성전자 서초사옥 웨딩홀<br>서울 서초구 서초대로74길 11 삼성전자빌딩 5층</span>
+                <br><br>
 
-              <div id="guideToMap" style="position: relative; flex-direction: column; justify-content: flex-start; align-items: flex-start; gap: 10px; display: inline-flex">
-
+                <div id="guideToMap" style="position: relative; flex-direction: column; justify-content: flex-start; align-items: flex-start; gap: 10px; display: inline-flex">
                 <div style="padding: 6px; display: inline-flex">
                   <img style="flex: 1 1 0; width:350px; height:189px; background: linear-gradient(0deg, white 0%, white 100%); border-radius: 17px" src="resources/image/yackdo_blue.png" />
                 </div>
@@ -171,41 +172,40 @@
                     </div>
                   </div>
                 </div>
+
+
+                <p>
+                <span>지하철<br>
+                  <small>강남역(2호선/신분당선) 8번 출구<br/>
+                    지하 연결통로 → 직진 후 좌회전(500m) → 엘리베이터(5층)<br/>
+                    또는, 지상 건물 외부 통유리 엘리베이터 이용 (5층)</small>
+                </span>
+                </p>
+
+                <p>
+                <span>셔틀버스 (대구)<br>
+                  <small>08:00  대구 수성구 동대구로 194 어린이회관 앞 / 15:00 회차</small>
+                </span>
+                </p>
+
+
+                <p>
+                <span>자가용<br>
+                  <small>
+                    삼성전자 서초사옥 주차장 (3시간 무료 주차 가능)<br/>1층에서 지상 건물 외부 통유리 엘리베이터 이용 (5층)
+                  </small>
+                </span>
+                </p>
+
+
+                <p>
+                <span>피로연장 안내<br>
+                  <small>
+                    일시 : 12:00 ~ 15:00<br/>장소 : 리샨 삼성타운점<br/>주소 : 삼성전자빌딩 지하 1층 B107호
+                  </small>
+                </span>
+                </p>
               </div>
-
-
-              <p>
-              <span>지하철<br>
-                <small>강남역(2호선/신분당선) 8번 출구<br/>
-                  지하 연결통로 → 직진 후 좌회전(500m) → 엘리베이터(5층)<br/>
-                  또는, 지상 건물 외부 통유리 엘리베이터 이용 (5층)</small>
-              </span>
-              </p>
-
-              <p>
-              <span>셔틀버스 (대구)<br>
-                <small>08:00  대구 수성구 동대구로 194 어린이회관 앞 / 15:00 회차</small>
-              </span>
-              </p>
-
-
-              <p>
-              <span>자가용<br>
-                <small>
-                  삼성전자 서초사옥 주차장 (3시간 무료 주차 가능)<br/>1층에서 지상 건물 외부 통유리 엘리베이터 이용 (5층)
-                </small>
-              </span>
-              </p>
-
-
-              <p>
-              <span>피로연장 안내<br>
-                <small>
-                  일시 : 12:00 ~ 15:00<br/>장소 : 리샨 삼성타운점<br/>주소 : 삼성전자빌딩 지하 1층 B107호
-                </small>
-              </span>
-              </p>
-
               <div class="footer"></div>
             </div>
 
