--- a/index.html
+++ b/index.html
@@ -64,13 +64,13 @@
 
 
       <!-- Page 3 : Dooms day -->
-      <div class="page" style="background-image: url(resources/image/galina-n-flower-unsplash.jpg); background-size: cover; background-color: transparent">
+      <div class="page" style="background: linear-gradient(#FBFBFBFF 0%, #D9D9D9FF 15%, #D9D9D900 30%, #D9D9D900 100%), url(resources/image/CallenderBG.jpg) no-repeat center center; background-size: cover; background-color: transparent; background-position: 50% 50%;">
         <div class="header-date">7 / 13</div>
         <div class="header-line"></div>
         <div class="header"></div>
 
         <h1>날짜</h1>
-        <div class="rect">
+        <div class="rect" style="background-color: #FBFBFBE0;">
           <div class="2024_July" style="position: relative; text-align: center; color: black; font-size: 27px; font-family: Italianno; font-weight: 400; word-wrap: break-word; padding-bottom: 30px;">2024. 07</div>
           <div class="calendar"></div>
         </div>
