Fit last page layouts

--- a/index.html
+++ b/index.html
@@ -214,29 +214,22 @@
         <div class="header-line"></div>
         <div class="header"></div>
         <h1>마음을 전하는 곳</h1>
-        <div class="rect">
+        <div class="rect" id="AccountBoard">
+          <!--
 
-          <div class="Grid" style="position: relative; flex-direction: column; justify-content: space-between; align-items: flex-start; display: inline-flex">
-            <div class="EunkiAccount" style="align-self: stretch; justify-content: space-between; align-items: center; display: inline-flex">
-              <div class="Frame10" style="width: 48px; align-self: stretch; flex-direction: column; justify-content: space-between; align-items: flex-end; display: inline-flex">
-                <div style="text-align: center; color: black; font-size: 15px; font-family: Noto Serif KR; font-weight: 400; line-height: 30px; word-wrap: break-word">신랑</div>
+          <div class="Account">
+            <div class="Line">
+              <div class="Text">신랑</div>
+              <div class="Text">홍은기</div>
+              <div class="Button">
+                <div class="Text">계좌</div>
               </div>
-              <div class="Frame11" style="width: 53px; padding-left: 1px; padding-right: 1px; flex-direction: column; justify-content: center; align-items: flex-end; gap: 10px; display: inline-flex">
-                <div style="text-align: center; color: black; font-size: 15px; font-family: Noto Serif KR; font-weight: 400; line-height: 30px; word-wrap: break-word">홍은기</div>
-              </div>
-              <div class="Frame12" style="flex: 1 1 0; align-self: stretch; justify-content: flex-end; align-items: center; gap: 10px; display: flex">
-                <div class="Button" style="width: 80px; height: 26px; box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); justify-content: flex-end; align-items: center; display: flex">
-                  <div class="Frame21" style="padding-left: 10px; padding-right: 10px; background: #ECEEF2; border-radius: 17px; overflow: hidden; flex-direction: column; justify-content: center; align-items: flex-end; gap: 10px; display: inline-flex">
-                    <div class="Button" style="color: #0F0F02; font-size: 13px; font-family: Noto Serif KR; font-weight: 400; line-height: 26px; word-wrap: break-word">계좌</div>
-                  </div>
-                </div>
-                <div class="Button" style="width: 80px; height: 26px; box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); justify-content: center; align-items: center; display: flex">
-                  <div class="Frame21" style="padding-left: 10px; padding-right: 10px; background: #ECEEF2; border-radius: 17px; overflow: hidden; flex-direction: column; justify-content: center; align-items: flex-end; gap: 10px; display: inline-flex">
-                    <div class="Button" style="color: #0F0F02; font-size: 13px; font-family: Noto Serif KR; font-weight: 400; line-height: 26px; word-wrap: break-word">카카오페이</div>
-                  </div>
-                </div>
+              <div class="Button">
+                <div class="Text">카카오페이</div>
               </div>
             </div>
+          </div>
+
             <div class="MoonsookAccount" style="align-self: stretch; justify-content: space-between; align-items: center; display: inline-flex">
               <div class="Frame10" style="width: 48px; align-self: stretch; flex-direction: column; justify-content: space-between; align-items: flex-end; display: inline-flex">
                 <div style="text-align: center; color: black; font-size: 15px; font-family: Noto Serif KR; font-weight: 400; line-height: 30px; word-wrap: break-word">어머님</div>
@@ -317,13 +310,14 @@
                   </div>
                 </div>
               </div>
-            </div>
+            </div>-->
           </div>
         </div>
         <div class="footer"></div>
       </div>
 
-      <script src="script.js" defer></script>
+      <script src="calendar-script.js" defer></script>
+      <script src="account-popup-script.js" defer></script>
 
       <!-- Initialize Swiper -->
       <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
