--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
             stretch: 0,
             depth: 100,
             modifier: 1,
-            slideShadows: true,
+            slideShadows: false,
           },
           pagination: {
             el: ".swiper-pagination",
