--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
       <!-- Page 1 : Main image -->
       <div class="page">
         <div class="Coverimage">
-          <div class="Frame9">
+          <div class="Frame9" style="position:relative; top:10%">
             <div style="font-size: 20px;">홍은기   &   이정민</div>
-            <div class="WeddingInvitation" style="color: #0F0F3F; font-size: 48px; font-family: Ingrid Darling;">Wedding Invitation</div>
+            <div class="WeddingInvitation" style="color: #0F0F3F; font-size: 60px; font-family: Ingrid Darling; margin: 10%">Wedding Invitation</div>
             <div style="font-size: 15px;">2024년 7월 13일 토요일 오후 1시<br/>삼성전자 서초 사옥 웨딩홀 5층</div>
             <div style="height:5vh;"></div>
           </div>
@@ -35,12 +35,11 @@
       </div>
 
       <!-- Page 2 : Welcome text -->
-      <div class="page">
+      <div class="content-page">
         <div class="header-date">7 / 13</div>
         <div class="header-line"></div>
         <div class="header"></div>
         <h1> 초대합니다. </h1>
-        <div class="content-box">
           <p style="padding: 5%">
           조심스럽게 시작했던 작은 사랑이<br>
           어느덧 한 평생 함께할 약속이 되었습니다.<br>
@@ -58,19 +57,15 @@
               <span>정민</span>
             </div>
           </div>
-        </div>
         <div class="footer"></div>
       </div>
 
 
       <!-- Page 3 : Dooms day -->
-      <div class="page" style="background: linear-gradient(#FBFBFBFF 0%, #D9D9D9FF 15%, #D9D9D900 30%, #D9D9D900 100%), url(resources/image/CallenderBG.jpg) no-repeat center center; background-size: cover; background-color: transparent; background-position: 50% 50%;">
-        <div class="header-date">7 / 13</div>
-        <div class="header-line"></div>
+      <div class="page" style="background: url(resources/image/CallenderBG.jpg) no-repeat center center; background-size: cover; background-color: transparent; background-position: 50% 50%;">
         <div class="header"></div>
 
-        <h1>날짜</h1>
-        <div class="rect" style="background-color: #FBFBFBE0;">
+        <div class="rect" style="top: 100px; background-color: #FBFBFBE0;">
           <div class="2024_July" style="position: relative; text-align: center; color: black; font-size: 27px; font-family: Italianno; font-weight: 400; word-wrap: break-word; padding-bottom: 30px;">2024. 07</div>
           <div class="calendar"></div>
         </div>
@@ -136,8 +131,7 @@
         <div class="header-line"></div>
         <div class="header"></div>
         <h1>오시는 길</h1>
-
-        <div class="content-box">
+          <div class="content-page">
           <div class="how-to-come">
             <span>삼성전자 서초사옥 웨딩홀<br>서울 서초구 서초대로74길 11 삼성전자빌딩 5층</span>
             <br><br>
@@ -209,110 +203,12 @@
       </div>
 
       <!-- Page 6 : Thanks to -->
-      <div class="page">
+      <div class="content-page">
         <div class="header-date">7 / 13</div>
         <div class="header-line"></div>
         <div class="header"></div>
         <h1>마음을 전하는 곳</h1>
-        <div class="rect" id="AccountBoard">
-          <!--
-
-          <div class="Account">
-            <div class="Line">
-              <div class="Text">신랑</div>
-              <div class="Text">홍은기</div>
-              <div class="Button">
-                <div class="Text">계좌</div>
-              </div>
-              <div class="Button">
-                <div class="Text">카카오페이</div>
-              </div>
-            </div>
-          </div>
-
-            <div class="MoonsookAccount" style="align-self: stretch; justify-content: space-between; align-items: center; display: inline-flex">
-              <div class="Frame10" style="width: 48px; align-self: stretch; flex-direction: column; justify-content: space-between; align-items: flex-end; display: inline-flex">
-                <div style="text-align: center; color: black; font-size: 15px; font-family: Noto Serif KR; font-weight: 400; line-height: 30px; word-wrap: break-word">어머님</div>
-              </div>
-              <div class="Frame11" style="width: 53px; padding-left: 1px; padding-right: 1px; flex-direction: column; justify-content: center; align-items: flex-end; gap: 10px; display: inline-flex">
-                <div style="text-align: center; color: black; font-size: 15px; font-family: Noto Serif KR; font-weight: 400; line-height: 30px; word-wrap: break-word">유문숙</div>
-              </div>
-              <div class="Frame13" style="flex: 1 1 0; align-self: stretch; justify-content: flex-end; align-items: center; gap: 10px; display: flex">
-                <div class="Button" style="width: 80px; height: 26px; box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); justify-content: flex-end; align-items: center; display: flex">
-                  <div class="Frame21" style="padding-left: 10px; padding-right: 10px; background: #ECEEF2; border-radius: 17px; overflow: hidden; flex-direction: column; justify-content: center; align-items: flex-end; gap: 10px; display: inline-flex">
-                    <div class="Button" style="color: #0F0F02; font-size: 13px; font-family: Noto Serif KR; font-weight: 400; line-height: 26px; word-wrap: break-word">계좌</div>
-                  </div>
-                </div>
-                <div class="Button" style="width: 80px; height: 26px; box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); justify-content: center; align-items: center; display: flex">
-                  <div class="Frame21" style="padding-left: 10px; padding-right: 10px; background: #ECEEF2; border-radius: 17px; overflow: hidden; flex-direction: column; justify-content: center; align-items: flex-end; gap: 10px; display: inline-flex">
-                    <div class="Button" style="color: #0F0F02; font-size: 13px; font-family: Noto Serif KR; font-weight: 400; line-height: 26px; word-wrap: break-word">카카오페이</div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="Line5" style="align-self: stretch; height: 0px; border: 1px #0F0F2F solid"></div>
-            <div class="JminAccount" style="align-self: stretch; justify-content: space-between; align-items: center; display: inline-flex">
-              <div class="Frame10" style="width: 48px; align-self: stretch; flex-direction: column; justify-content: space-between; align-items: flex-end; display: inline-flex">
-                <div style="text-align: center; color: black; font-size: 15px; font-family: Noto Serif KR; font-weight: 400; line-height: 30px; word-wrap: break-word">신부</div>
-              </div>
-              <div class="Frame11" style="width: 53px; padding-left: 1px; padding-right: 1px; flex-direction: column; justify-content: center; align-items: flex-end; gap: 10px; display: inline-flex">
-                <div style="text-align: center; color: black; font-size: 15px; font-family: Noto Serif KR; font-weight: 400; line-height: 30px; word-wrap: break-word">이정민</div>
-              </div>
-              <div class="Frame14" style="flex: 1 1 0; align-self: stretch; justify-content: flex-end; align-items: center; gap: 10px; display: flex">
-                <div class="Button" style="width: 80px; height: 26px; box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); justify-content: flex-end; align-items: center; display: flex">
-                  <div class="Frame21" style="padding-left: 10px; padding-right: 10px; background: #ECEEF2; border-radius: 17px; overflow: hidden; flex-direction: column; justify-content: center; align-items: flex-end; gap: 10px; display: inline-flex">
-                    <div class="Button" style="color: #0F0F02; font-size: 13px; font-family: Noto Serif KR; font-weight: 400; line-height: 26px; word-wrap: break-word">계좌</div>
-                  </div>
-                </div>
-                <div class="Button" style="width: 80px; height: 26px; box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); justify-content: center; align-items: center; display: flex">
-                  <div class="Frame21" style="padding-left: 10px; padding-right: 10px; background: #ECEEF2; border-radius: 17px; overflow: hidden; flex-direction: column; justify-content: center; align-items: flex-end; gap: 10px; display: inline-flex">
-                    <div class="Button" style="color: #0F0F02; font-size: 13px; font-family: Noto Serif KR; font-weight: 400; line-height: 26px; word-wrap: break-word">카카오페이</div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="JjunAccount" style="align-self: stretch; justify-content: space-between; align-items: center; display: inline-flex">
-              <div class="Frame10" style="width: 48px; align-self: stretch; flex-direction: column; justify-content: space-between; align-items: flex-end; display: inline-flex">
-                <div style="text-align: center; color: black; font-size: 15px; font-family: Noto Serif KR; font-weight: 400; line-height: 30px; word-wrap: break-word">아버님</div>
-              </div>
-              <div class="Frame11" style="width: 53px; padding-left: 1px; padding-right: 1px; flex-direction: column; justify-content: center; align-items: flex-end; gap: 10px; display: inline-flex">
-                <div style="text-align: center; color: black; font-size: 15px; font-family: Noto Serif KR; font-weight: 400; line-height: 30px; word-wrap: break-word">이재준</div>
-              </div>
-              <div class="Frame15" style="flex: 1 1 0; align-self: stretch; justify-content: flex-end; align-items: center; gap: 10px; display: flex">
-                <div class="Button" style="width: 80px; height: 26px; box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); justify-content: flex-end; align-items: center; display: flex">
-                  <div class="Frame21" style="padding-left: 10px; padding-right: 10px; background: #ECEEF2; border-radius: 17px; overflow: hidden; flex-direction: column; justify-content: center; align-items: flex-end; gap: 10px; display: inline-flex">
-                    <div class="Button" style="color: #0F0F02; font-size: 13px; font-family: Noto Serif KR; font-weight: 400; line-height: 26px; word-wrap: break-word">계좌</div>
-                  </div>
-                </div>
-                <div class="Button" style="width: 80px; height: 26px; box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); justify-content: center; align-items: center; display: flex">
-                  <div class="Frame21" style="padding-left: 10px; padding-right: 10px; background: #ECEEF2; border-radius: 17px; overflow: hidden; flex-direction: column; justify-content: center; align-items: flex-end; gap: 10px; display: inline-flex">
-                    <div class="Button" style="color: #0F0F02; font-size: 13px; font-family: Noto Serif KR; font-weight: 400; line-height: 26px; word-wrap: break-word">카카오페이</div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="ShyaeAccount" style="align-self: stretch; justify-content: space-between; align-items: center; display: inline-flex">
-              <div class="Frame10" style="width: 48px; align-self: stretch; flex-direction: column; justify-content: space-between; align-items: flex-end; display: inline-flex">
-                <div style="text-align: center; color: black; font-size: 15px; font-family: Noto Serif KR; font-weight: 400; line-height: 30px; word-wrap: break-word">어머님</div>
-              </div>
-              <div class="Frame11" style="width: 53px; padding-left: 1px; padding-right: 1px; flex-direction: column; justify-content: center; align-items: flex-end; gap: 10px; display: inline-flex">
-                <div style="text-align: center; color: black; font-size: 15px; font-family: Noto Serif KR; font-weight: 400; line-height: 30px; word-wrap: break-word">한승혜</div>
-              </div>
-              <div class="Frame16" style="flex: 1 1 0; align-self: stretch; justify-content: flex-end; align-items: center; gap: 10px; display: flex">
-                <div class="Button" style="width: 80px; height: 26px; box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); justify-content: flex-end; align-items: center; display: flex">
-                  <div class="Frame21" style="padding-left: 10px; padding-right: 10px; background: #ECEEF2; border-radius: 17px; overflow: hidden; flex-direction: column; justify-content: center; align-items: flex-end; gap: 10px; display: inline-flex">
-                    <div class="Button" style="color: #0F0F02; font-size: 13px; font-family: Noto Serif KR; font-weight: 400; line-height: 26px; word-wrap: break-word">계좌</div>
-                  </div>
-                </div>
-                <div class="Button" style="width: 80px; height: 26px; box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); justify-content: center; align-items: center; display: flex">
-                  <div class="Frame21" style="padding-left: 10px; padding-right: 10px; background: #ECEEF2; border-radius: 17px; overflow: hidden; flex-direction: column; justify-content: center; align-items: flex-end; gap: 10px; display: inline-flex">
-                    <div class="Button" style="color: #0F0F02; font-size: 13px; font-family: Noto Serif KR; font-weight: 400; line-height: 26px; word-wrap: break-word">카카오페이</div>
-                  </div>
-                </div>
-              </div>
-            </div>-->
-          </div>
-        </div>
+        <div class="rect" id="AccountBoard"></div>
         <div class="footer"></div>
       </div>
 
