Fix several issues at gallery
 - Fix scaled image clipped when image scaled up by horver
 - Make swipper don't break layout when internet connection failed.

Signed-off-by: Eunki Hong <h.pichulia@gmail.com>

--- a/public/gallery_more.html
+++ b/public/gallery_more.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div>
-        <h1>More images!</h1>
+        <h1>More images! (Swipt left to right)</h1>
     </div>
     <div>
         <div class="MoreImages"></div>
