--- a/index.html
+++ b/index.html
@@ -81,45 +81,8 @@
         <h1>갤러리</h1>
 
         <div class="galleryContent">
-          <div id="galleryContainer">
-            <div class="swiper mySwiper">
-              <div class="swiper-wrapper">
-                <div class="swiper-slide">
-                  <img src="https://drive.google.com/thumbnail?sz=w300&id=13G4l_TenpJI6OLcJjtkzx-dsabcALQFh" alt="gallery-image-1" loading="lazy" width="300" onload="photoLoaded();" onclick="ModalOpen(this);"/>
-                </div>
-                <div class="swiper-slide">
-                  <img src="https://drive.google.com/thumbnail?sz=w300&id=14ZmbfFtqJPty8cwDoIBRxmT8tC0aVtXU" alt="gallery-image-2" loading="lazy" width="300" onload="photoLoaded();" onclick="ModalOpen(this);"/>
-                </div>
-                <div class="swiper-slide">
-                  <img src="https://drive.google.com/thumbnail?sz=w300&id=1zq60kg0UhTXuYpytULj0AmhCIFVVoXP4" alt="gallery-image-3" loading="lazy" width="300" onload="photoLoaded();" onclick="ModalOpen(this);"/>
-                </div>
-                <div class="swiper-slide">
-                  <img src="https://drive.google.com/thumbnail?sz=w300&id=1ChU8iPaH6yVbTrSAEIHBoh1mhv4l0BEz" alt="gallery-image-4" loading="lazy" width="300" onload="photoLoaded();" onclick="ModalOpen(this);"/>
-                </div>
-                <div class="swiper-slide">
-                  <img src="https://drive.google.com/thumbnail?sz=w300&id=1VTRhqp7B6oOSMcx56sdjUGRBqi9RUJ4U" alt="gallery-image-5" loading="lazy" width="300" onload="photoLoaded();" onclick="ModalOpen(this);"/>
-                </div>
-                <div class="swiper-slide">
-                  <img src="https://drive.google.com/thumbnail?sz=w300&id=1ZzT2aCbhOlbxFQZnJYOVq3odn22d9JUL" alt="gallery-image-6" loading="lazy" width="300" onload="photoLoaded();" onclick="ModalOpen(this);"/>
-                </div>
-                <div class="swiper-slide">
-                  <img src="https://drive.google.com/thumbnail?sz=w300&id=1d2Mku8yDsUr0z12NyX_lXZj2Y8PW2ypO" alt="gallery-image-7" loading="lazy" width="300" onload="photoLoaded();" onclick="ModalOpen(this);"/>
-                </div>
-                <div class="swiper-slide">
-                  <img src="https://drive.google.com/thumbnail?sz=w300&id=1yYYCYADQGp8OYAt0xEElNaty0GQMWUZ0" alt="gallery-image-8" loading="lazy" width="300" onload="photoLoaded();" onclick="ModalOpen(this);"/>
-                </div>
-                <div class="swiper-slide">
-                  <div style="display:grid;vertical-align:middle;background-color:#FBFBFB;aspect-ratio:1/1;align-items:center;margin:auto;max-width:50%;">
-                    <button id="galleryMoreButton" onclick="GalleryMoreClicked()" style="aspect-ratio:1/1;">
-                      더 보기<br/>(예상 데이터 사용량 : 약 120MB)
-                    </button>
-                  </div>
-                </div>
-              </div>
-              <div class="swiper-button-next"></div>
-              <div class="swiper-button-prev"></div>
-              <div class="swiper-pagination"></div>
-            </div>
+          <div class="galleryContainer">
+            <div class="swiper mySwiper"></div>
           </div>
         </div>
         <div class="footer"></div>
@@ -214,6 +177,9 @@
 
       <script src="calendar-script.js" defer></script>
       <script src="account-popup-script.js" defer></script>
+
+      <!-- This script should be called before swipper script called -->
+      <script src="./public/scripts/more-images-generator.js"></script>
 
       <!-- Initialize Swiper -->
       <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
