Give wedding darling margin as vh, instead of %
Signed-off-by: Eunki Hong <h.pichulia@gmail.com>

--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
         <div class="Coverimage">
           <div class="Frame9" style="position:relative; top:10%">
             <div style="font-size: 20px;">홍은기   &   이정민</div>
-            <div class="WeddingInvitation" style="color: #0F0F3F; font-size: 60px; font-family: Ingrid Darling; margin: 10%">Wedding Invitation</div>
+            <div class="WeddingInvitation" style="color: #0F0F3F; font-size: 60px; font-family: Ingrid Darling; margin: 2vh">Wedding Invitation</div>
             <div style="font-size: 15px;">2024년 7월 13일 토요일 오후 1시<br/>삼성전자 서초 사옥 웨딩홀 5층</div>
-            <div style="height:5vh;"></div>
+            <div style="height:5vh;"></div> <!-- Why ?? -->
           </div>
         </div>
       </div>
