--- a/index.html
+++ b/index.html
@@ -96,69 +96,62 @@
         <h1>오시는 길</h1>
           <div class="content-page">
           <div class="how-to-come">
-            <span>삼성전자 서초사옥 웨딩홀<br>서울 서초구 서초대로74길 11 삼성전자빌딩 5층</span>
-            <br><br>
+            <p>
+              <span>삼성전자 서초사옥 웨딩홀<br/>서울 서초구 서초대로74길 11 삼성전자빌딩 5층</span>
+            </p>
 
-            <div id="guideToMap" style="position: relative; flex-direction: column; justify-content: flex-start; align-items: flex-start; gap: 10px; display: inline-flex">
-              <div style="padding: 6px; display: inline-flex">
-                <img style="flex: 1 1 0; width:350px; height:189px; background: linear-gradient(0deg, white 0%, white 100%); border-radius: 17px" src="resources/image/yackdo_blue.png" />
-              </div>
+            <p>
+              <div class="guideToMap">
+                <div style="padding: 6px; display: inline-flex">
+                  <img style="flex: 1 1 0; width:350px; height:189px; background: white; border-radius: 17px" src="resources/image/yackdo_blue.png" />
+                </div>
 
-
-              <div style="align-self: stretch; padding: 10px 50px 10px 50px; justify-content: space-between; align-items: flex-start; display: inline-flex">
-                <div class="icon-button">
-                  <div>
-                    <a href="https://naver.me/5FeZnWRl" target="_blank" rel="noopener noreferrer"><img class="icon-image" src="resources/image/icon_naver.webp" /></a>
-                  </div>
-                </div>
-                <div class="icon-button">
-                  <div>
-                    <a href="https://kko.to/tpCZwj_l0x" target="_blank" rel="noopener noreferrer"><img class="icon-image" src="resources/image/icon_kakao.png" /></a>
-                  </div>
-                </div>
-                <div class="icon-button">
-                  <div>
-                    <a href="https://tmap.life/576bf240" target="_blank" rel="noopener noreferrer"><img class="icon-image" src="resources/image/icon_tmap.jpeg" /></a>
-                  </div>
-                </div>
-                <div class="icon-button">
-                  <div>
-                    <a href="https://maps.app.goo.gl/EPS9zJCJDM8enhWp8" target="_blank" rel="noopener noreferrer"><img class="icon-image" src="resources/image/icon_google.png" /></a>
-                  </div>
+                <div class="iconButtonContainer">
+                  <div class="icon-button"><a href="https://naver.me/5FeZnWRl" target="_blank" rel="noopener noreferrer"><img class="icon-image" src="resources/image/icon_naver.webp" /></a></div>
+                  <div class="icon-button"><a href="https://kko.to/tpCZwj_l0x" target="_blank" rel="noopener noreferrer"><img class="icon-image" src="resources/image/icon_kakao.png" /></a></div>
+                  <div class="icon-button"><a href="https://tmap.life/576bf240" target="_blank" rel="noopener noreferrer"><img class="icon-image" src="resources/image/icon_tmap.jpeg" /></a></div>
+                  <div class="icon-button"><a href="https://maps.app.goo.gl/EPS9zJCJDM8enhWp8" target="_blank" rel="noopener noreferrer"><img class="icon-image" src="resources/image/icon_google.png" /></a></div>
                 </div>
               </div>
-            </div>
-
-            <p>
-            <span>지하철<br>
-              <small>강남역(2호선/신분당선) 8번 출구<br/>
-                지하 연결통로 → 직진 후 좌회전(500m) → 엘리베이터(5층)<br/>
-                또는, 지상 건물 외부 통유리 엘리베이터 이용 (5층)</small>
-            </span>
             </p>
 
             <p>
-            <span>셔틀버스 (대구)<br>
-              <small>08:00  대구 수성구 동대구로 194 어린이회관 앞 / 15:00 회차</small>
-            </span>
+              <span>지하철<br/>
+                <small>
+                  강남역(2호선/신분당선) 8번 출구<br/>
+                  지하 연결통로 → 직진 후 좌회전(500m) → 엘리베이터(5층)<br/>
+                  또는, 지상 건물 외부 통유리 엘리베이터 이용 (5층)
+                </small>
+              </span>
             </p>
 
-
             <p>
-            <span>자가용<br>
-              <small>
-                삼성전자 서초사옥 주차장 (3시간 무료 주차 가능)<br/>1층에서 지상 건물 외부 통유리 엘리베이터 이용 (5층)
-              </small>
-            </span>
+              <span>셔틀버스 (대구)<br/>
+                <small>
+                  08:00  대구 수성구 동대구로 194 어린이회관 앞 / 15:00 회차
+                </small>
+              </span>
             </p>
 
 
             <p>
-            <span>피로연장 안내<br>
-              <small>
-                일시 : 12:00 ~ 15:00<br/>장소 : 리샨 삼성타운점<br/>주소 : 삼성전자빌딩 지하 1층 B107호
-              </small>
-            </span>
+              <span>자가용<br/>
+                <small>
+                  삼성전자 서초사옥 주차장 (3시간 무료 주차 가능)<br/>
+                  1층에서 지상 건물 외부 통유리 엘리베이터 이용 (5층)
+                </small>
+              </span>
+            </p>
+
+
+            <p>
+              <span>피로연장 안내<br/>
+                <small>
+                  일시 : 12:00 ~ 15:00<br/>
+                  장소 : 리샨 삼성타운점<br/>
+                  주소 : 삼성전자빌딩 지하 1층 B107호
+                </small>
+              </span>
             </p>
           </div>
         </div>
