--- a/index.html
+++ b/index.html
@@ -94,26 +94,24 @@
         <div class="header-line"></div>
         <div class="header"></div>
         <h1>오시는 길</h1>
-          <div class="content-page">
-          <div class="how-to-come">
+        <div class="content-page">
+          <div class="howToCome">
             <p>
               <span>삼성전자 서초사옥 웨딩홀<br/>서울 서초구 서초대로74길 11 삼성전자빌딩 5층</span>
             </p>
 
-            <p>
-              <div class="guideToMap">
-                <div style="padding: 6px; display: inline-flex">
-                  <img style="flex: 1 1 0; width:350px; height:189px; background: white; border-radius: 17px" src="resources/image/yackdo_blue.png" />
-                </div>
-
-                <div class="iconButtonContainer">
-                  <div class="icon-button"><a href="https://naver.me/5FeZnWRl" target="_blank" rel="noopener noreferrer"><img class="icon-image" src="resources/image/icon_naver.webp" /></a></div>
-                  <div class="icon-button"><a href="https://kko.to/tpCZwj_l0x" target="_blank" rel="noopener noreferrer"><img class="icon-image" src="resources/image/icon_kakao.png" /></a></div>
-                  <div class="icon-button"><a href="https://tmap.life/576bf240" target="_blank" rel="noopener noreferrer"><img class="icon-image" src="resources/image/icon_tmap.jpeg" /></a></div>
-                  <div class="icon-button"><a href="https://maps.app.goo.gl/EPS9zJCJDM8enhWp8" target="_blank" rel="noopener noreferrer"><img class="icon-image" src="resources/image/icon_google.png" /></a></div>
-                </div>
+            <div class="guideToMap">
+              <div style="padding: 6px; display: inline-flex">
+                <img style="flex: 1 1 0; width:350px; height:189px; background: white; border-radius: 17px" src="resources/image/yackdo_blue.png" />
               </div>
-            </p>
+
+              <div class="iconButtonContainer">
+                <div class="icon-button"><a href="https://naver.me/5FeZnWRl" target="_blank" rel="noopener noreferrer"><img class="icon-image" src="resources/image/icon_naver.webp" /></a></div>
+                <div class="icon-button"><a href="https://kko.to/tpCZwj_l0x" target="_blank" rel="noopener noreferrer"><img class="icon-image" src="resources/image/icon_kakao.png" /></a></div>
+                <div class="icon-button"><a href="https://tmap.life/576bf240" target="_blank" rel="noopener noreferrer"><img class="icon-image" src="resources/image/icon_tmap.jpeg" /></a></div>
+                <div class="icon-button"><a href="https://maps.app.goo.gl/EPS9zJCJDM8enhWp8" target="_blank" rel="noopener noreferrer"><img class="icon-image" src="resources/image/icon_google.png" /></a></div>
+              </div>
+            </div>
 
             <p>
               <span>지하철<br/>
