Add popup for account information

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>홍은기 ❤️ 이정민 결혼식에 초대합니다</title>
     <link href="./public/styles/main.css" rel="stylesheet"/>
     <link href="./css/style_main.css" rel="stylesheet"/>
+    <link href="./css/popup.css" rel="stylesheet"/>
     <link rel="icon" href="./resources/image/favicon.ico">
     <script src="./public/scripts/main.js"></script>
 
@@ -165,6 +166,7 @@
         <div class="rect" id="AccountBoard"></div>
         <div class="footer"></div>
       </div>
+      <div id="account-popup" class="Pop-up-wrapper"></div>
 
       <script src="calendar-script.js" defer></script>
       <script src="account-popup-script.js" defer></script>
