Make header / footer use em, instead of percent
Signed-off-by: Eunki Hong <h.pichulia@gmail.com>

--- a/index.html
+++ b/index.html
@@ -66,10 +66,11 @@
       <div class="page" style="background: url(resources/image/CallenderBG.jpg) no-repeat center center; background-size: cover; background-color: transparent; background-position: 50% 50%;">
         <div class="header"></div>
 
-        <div class="rect" style="top: 100px; background-color: #FBFBFBE0;">
+        <div class="rect" style="top: 80px; background-color: #FBFBFBE0;">
           <div class="2024_July" style="position: relative; text-align: center; color: black; font-size: 27px; font-family: Italianno; font-weight: 400; word-wrap: break-word; padding-bottom: 30px;">2024. 07</div>
           <div class="calendar"></div>
         </div>
+        <div style="height : 160px;"></div>
 
         <div class="footer"></div>
       </div>
