--- a/gallery_more.html
+++ b/gallery_more.html
@@ -5,9 +5,9 @@
     <meta content="IE=edge" http-equiv="X-UA-Compatible">
     <meta content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1" name="viewport">
     <title>홍은기 ❤️ 이정민 갤러리</title>
-    <link href="./styles/main.css" rel="stylesheet"/>
-    <link rel="icon" href="../resources/image/favicon.ico">
-    <script src="scripts/main.js"></script>
+    <link href="./styles/style_sub.css" rel="stylesheet"/>
+    <link rel="icon" href="./resources/image/favicon.ico">
+    <script src="./scripts/click-script.js"></script>
 </head>
 <body>
     <div>
