--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1" name="viewport">
 
     <title>홍은기 ❤️ 이정민 결혼식에 초대합니다</title>
-    <link href="./public/styles/main.css" rel="stylesheet"/>
-    <link href="./css/style_main.css" rel="stylesheet"/>
-    <link href="./css/popup.css" rel="stylesheet"/>
+    <link href="./styles/style_main.css" rel="stylesheet"/>
+    <link href="./styles/style_sub.css" rel="stylesheet"/>
+    <link href="./styles/style_popup.css" rel="stylesheet"/>
     <link rel="icon" href="./resources/image/favicon.ico">
-    <script src="./public/scripts/main.js"></script>
+    <script src="./scripts/click-script.js"></script>
 
     <!-- https://swiperjs.com/demos#effect-coverflow -->
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
@@ -63,7 +63,7 @@
 
 
       <!-- Page 3 : Dooms day -->
-      <div class="page" style="background: url(resources/image/CallenderBG.jpg) no-repeat center center; background-size: cover; background-color: transparent; background-position: 50% 50%;">
+      <div class="page" style="background: url(./resources/image/CallenderBG.jpg) no-repeat center center; background-size: cover; background-color: transparent; background-position: 50% 50%;">
         <div class="header"></div>
 
         <div class="rect" style="top: 80px; background-color: #FBFBFBE0;">
@@ -104,14 +104,14 @@
 
             <div class="guideToMap">
               <div style="padding: 6px; display: inline-flex">
-                <img style="flex: 1 1 0; width:350px; height:189px; background: white; border-radius: 17px" src="resources/image/yackdo_blue.png" />
+                <img style="flex: 1 1 0; width:350px; height:189px; background: white; border-radius: 17px" src="./resources/image/yackdo_blue.png" />
               </div>
 
               <div class="iconButtonContainer">
-                <div class="icon-button"><a href="https://naver.me/5FeZnWRl" target="_blank" rel="noopener noreferrer"><img class="icon-image" src="resources/image/icon_naver.webp" /></a></div>
-                <div class="icon-button"><a href="https://kko.to/tpCZwj_l0x" target="_blank" rel="noopener noreferrer"><img class="icon-image" src="resources/image/icon_kakao.png" /></a></div>
-                <div class="icon-button"><a href="https://tmap.life/576bf240" target="_blank" rel="noopener noreferrer"><img class="icon-image" src="resources/image/icon_tmap.jpeg" /></a></div>
-                <div class="icon-button"><a href="https://maps.app.goo.gl/EPS9zJCJDM8enhWp8" target="_blank" rel="noopener noreferrer"><img class="icon-image" src="resources/image/icon_google.png" /></a></div>
+                <div class="icon-button"><a href="https://naver.me/5FeZnWRl" target="_blank" rel="noopener noreferrer"><img class="icon-image" src="./resources/image/icon_naver.webp" /></a></div>
+                <div class="icon-button"><a href="https://kko.to/tpCZwj_l0x" target="_blank" rel="noopener noreferrer"><img class="icon-image" src="./resources/image/icon_kakao.png" /></a></div>
+                <div class="icon-button"><a href="https://tmap.life/576bf240" target="_blank" rel="noopener noreferrer"><img class="icon-image" src="./resources/image/icon_tmap.jpeg" /></a></div>
+                <div class="icon-button"><a href="https://maps.app.goo.gl/EPS9zJCJDM8enhWp8" target="_blank" rel="noopener noreferrer"><img class="icon-image" src="./resources/image/icon_google.png" /></a></div>
               </div>
             </div>
 
@@ -169,11 +169,11 @@
       </div>
       <div id="account-popup" class="Pop-up-wrapper"></div>
 
-      <script src="calendar-script.js" defer></script>
-      <script src="account-popup-script.js" defer></script>
+      <script src="./scripts/calendar-script.js" defer></script>
+      <script src="./scripts/account-popup-script.js" defer></script>
 
       <!-- This script should be called before swipper script called -->
-      <script src="./public/scripts/more-images-generator.js"></script>
+      <script src="./scripts/more-images-generator.js"></script>
 
       <!-- Initialize Swiper -->
       <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
