--- a/gallery_more.html
+++ b/gallery_more.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div>
-        <h1>More images! (Swipt left to right)</h1>
+        <h1>More images! (Swipe left to right)</h1>
     </div>
     <div>
         <div class="MoreImages"></div>
