Resolve some typo error + Accessibility scale-up allow
Signed-off-by: Eunki Hong <h.pichulia@gmail.com>

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8"/>
     <meta content="IE=edge" http-equiv="X-UA-Compatible"/>
-    <meta content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1" name="viewport"/>
+    <meta content="width=device-width, initial-scale=1" name="viewport"/>
 
     <!-- Thumbnail image when we share this url -->
     <meta content="https://drive.google.com/thumbnail?sz=w300&id=1PUc2P1pjq0xa4u0IALakBiBLA-NxjqKr" property="og:image"/>
