Make font-size / line-height and some gaps relative on system font size.
Signed-off-by: Eunki Hong <h.pichulia@gmail.com>

--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
       <div class="content-page">
         <div class="Coverimage">
           <div class="Frame9" style="position:relative;">
-            <div style="font-size: 20px;">홍은기   &   이정민</div>
-            <div class="WeddingInvitation" style="color: #0F0F3F; font-size: 60px; font-family: Ingrid Darling; margin: 2vh">Wedding Invitation</div>
-            <div style="font-size: 15px;">2024년 7월 13일 토요일 오후 1시<br/>삼성전자 서초 사옥 웨딩홀 5층</div>
+            <div style="font-size: 1.25rem;">홍은기   &   이정민</div>
+            <div class="WeddingInvitation" style="color: #0F0F3F; font-size: 3.75rem; font-family: Ingrid Darling; margin: 2vh">Wedding Invitation</div>
+            <div style="font-size: 0.94rem;">2024년 7월 13일 토요일 오후 1시<br/>삼성전자 서초 사옥 웨딩홀 5층</div>
           </div>
         </div>
       </div>
@@ -69,7 +69,7 @@
         <div class="header"></div>
 
         <div class="rect" style="top: 80px; background-color: #FBFBFBE0;">
-          <div class="2024_July" style="position: relative; text-align: center; color: black; font-size: 27px; font-family: Italianno; font-weight: 400; word-wrap: break-word; padding-bottom: 30px;">2024. 07</div>
+          <div class="2024_July" style="position: relative; text-align: center; color: black; font-size: 1.69rem; font-family: Italianno; font-weight: 400; word-wrap: break-word; padding-bottom: 30px;">2024. 07</div>
           <div class="calendar"></div>
         </div>
         <div style="height : 160px;"></div>
