--- a/debug.html
+++ b/debug.html
@@ -30,9 +30,9 @@
       <div class="content-page">
         <div class="Coverimage">
           <div class="Frame9" style="border-inline: 1rem solid red;">
-            <div style="font-size: 1.25rem; border-inline: 1rem solid red;">글자 1</div>
-            <div class="WeddingInvitation" style="color: #0F0F3F; font-size: 3.75rem; font-family: Ingrid Darling; margin: 2vh;border-inline: 1rem solid red;">줄 2</div>
-            <div style="font-size: 0.94rem;border-inline: 1rem solid red;">줄 3<br/>줄 4</div>
+            <div class="TitleText" style="font-size: 1.25rem; border: 1rem solid blue;">글자 1</div>
+            <div class="TitleText" style="color: #0F0F3F; font-size: 3.75rem; font-family: Ingrid Darling; margin: 2vh;border-inline: 1rem solid red;">줄 2</div>
+            <div class="TitleText" style="font-size: 0.94rem;border: 1rem solid blue;">줄 3<br/>줄 4</div>
           </div>
         </div>
       </div>
