Make h1 use class

--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
       <div class="content-page">
         <div class="Coverimage">
           <div class="Frame9" style="position:relative;">
-            <div style="font-size: 1.25rem;">홍은기   &   이정민</div>
-            <div class="WeddingInvitation" style="color: #0F0F3F; font-size: 3.75rem; font-family: Ingrid Darling; margin: 2vh">Wedding Invitation</div>
-            <div style="font-size: 0.94rem;">2024년 7월 13일 토요일 오후 1시<br/>삼성전자 서초 사옥 웨딩홀 5층</div>
+            <div class="TitleText" style="font-size: 1.25rem;">홍은기   &   이정민</div>
+            <div class="TitleText" style="color: #0F0F3F; font-size: 3.75rem; font-family: Ingrid Darling; margin: 2vh">Wedding Invitation</div>
+            <div class="TitleText" style="font-size: 0.94rem;">2024년 7월 13일 토요일 오후 1시<br/>삼성전자 서초 사옥 웨딩홀 5층</div>
           </div>
         </div>
       </div>
@@ -42,7 +42,7 @@
         <div class="header-date">7 / 13</div>
         <div class="header-line"></div>
         <div class="header"></div>
-        <h1> 초대합니다. </h1>
+        <h1 class="titleText"> 초대합니다. </h1>
           <p style="padding: 5%">
           조심스럽게 시작했던 작은 사랑이<br>
           어느덧 한 평생 함께할 약속이 되었습니다.<br>
@@ -82,7 +82,7 @@
         <div class="header-date">7 / 13</div>
         <div class="header-line"></div>
         <div class="header"></div>
-        <h1>갤러리</h1>
+        <h1 class="titleText">갤러리</h1>
 
         <div class="galleryContent">
           <div class="galleryContainer">
@@ -97,7 +97,7 @@
         <div class="header-date">7 / 13</div>
         <div class="header-line"></div>
         <div class="header"></div>
-        <h1>오시는 길</h1>
+        <h1 class="titleText">오시는 길</h1>
 
         <div class="content-page" style="max-width: 400px;">
           <div class="howToCome">
@@ -166,7 +166,7 @@
         <div class="header-date">7 / 13</div>
         <div class="header-line"></div>
         <div class="header"></div>
-        <h1>마음을 전하는 곳</h1>
+        <h1 class="titleText">마음을 전하는 곳</h1>
         <div class="rect" id="AccountBoard"></div>
         <div class="footer"></div>
       </div>
