--- a/debug.html
+++ b/debug.html
@@ -30,8 +30,8 @@
       <div class="content-page">
         <div class="Coverimage">
           <div class="Frame9" style="border-inline: 1rem solid red;">
-            <div class="TitleText" style="font-size: 1.25rem; border: 1rem solid blue;">글자 1</div>
-            <div class="TitleText" style="color: #0F0F3F; font-size: 3.75rem; font-family: Ingrid Darling; margin: 2vh;border-inline: 1rem solid red;">줄 2</div>
+            <div class="TitleText" style="font-size: 1.25rem; border: 1rem solid green;">글자 1</div>
+            <div class="TitleText" style="color: #0F0F3F; font-size: 3.75rem; font-family: Ingrid Darling; margin: 2vh;border: 1rem solid blue;">줄 2</div>
             <div class="TitleText" style="font-size: 0.94rem;border: 1rem solid blue;">줄 3<br/>줄 4</div>
           </div>
         </div>
@@ -42,7 +42,7 @@
         <div class="header-date">7 / 13</div>
         <div class="header-line"></div>
         <div class="header"></div>
-        <h1 style="border-inline: 1rem solid red;"> 초대합니다. </h1>
+        <h1 class="titleText" style="border-inline: 1rem solid red;"> 초대합니다. </h1>
           <p style="padding: 5%;border-inline: 1rem solid red;">
           밍<br/>밍<br/>밍
           </p>
