Add meta data for preview
Signed-off-by: Eunki Hong <h.pichulia@gmail.com>

--- a/debug.html
+++ b/debug.html
@@ -5,9 +5,6 @@
     <meta content="IE=edge" http-equiv="X-UA-Compatible"/>
     <meta content="width=device-width, initial-scale=1" name="viewport"/>
 
-    <!-- Thumbnail image when we share this url -->
-    <meta content="https://drive.google.com/thumbnail?sz=w300&id=1PUc2P1pjq0xa4u0IALakBiBLA-NxjqKr" property="og:image"/>
-
     <title>디버그 페이지</title>
     <link href="./styles/style_main.css" rel="stylesheet"/>
     <link href="./styles/style_sub.css" rel="stylesheet"/>
@@ -25,24 +22,11 @@
   </head>
   <body>
     <div class="full-page">
-
-      <!-- Page 1 : Main image -->
-      <div class="content-page">
-        <div class="Coverimage">
-          <div class="Frame9" style="border-inline: 1rem solid red;">
-            <div class="TitleText" style="font-size: 1.25rem; border: 1rem solid green;">글자 1</div>
-            <div class="TitleText" style="color: #0F0F3F; font-size: 3.75rem; font-family: Ingrid Darling; margin: 2vh;border: 1rem solid blue;">줄 2</div>
-            <div class="TitleText" style="font-size: 0.94rem;border: 1rem solid blue;">줄 3<br/>줄 4</div>
-          </div>
-        </div>
-      </div>
-
-      <!-- Page 2 : Welcome text -->
       <div class="content-page">
         <div class="header-date">7 / 13</div>
         <div class="header-line"></div>
         <div class="header"></div>
-        <h1 class="titleText" style="border-inline: 1rem solid red;"> 초대합니다. </h1>
+        <h1 class="titleText" style="border-inline: 1rem solid red;"> titleText </h1>
           <p style="padding: 5%;border-inline: 1rem solid red;">
           밍<br/>밍<br/>밍
           </p>
