--- a/index.html
+++ b/index.html
@@ -3,10 +3,25 @@
   <head>
     <meta charset="UTF-8"/>
     <meta content="IE=edge" http-equiv="X-UA-Compatible"/>
-    <meta content="width=device-width, initial-scale=1" name="viewport"/>
 
     <!-- Thumbnail image when we share this url -->
-    <meta content="https://drive.google.com/thumbnail?sz=w300&id=1PUc2P1pjq0xa4u0IALakBiBLA-NxjqKr" property="og:image"/>
+    <!-- OpenGraph (Facebook / Kakao / ETC) -->
+    <meta property="og:title" content="홍은기 ❤️ 이정민 결혼식에 초대합니다" />
+    <meta property="og:description" content="2024년 7월 13일 토요일 오후 1시 삼성전자 서초 사옥 웨딩홀 5층" />
+    <meta property="og:locale" content="ko_KR" />
+    <meta property="og:url" content="https://hinohie.github.io" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="https://drive.google.com/thumbnail?sz=w300&id=1PUc2P1pjq0xa4u0IALakBiBLA-NxjqKr" />
+    <meta property="og:image:width" content="300" />
+    <meta property="og:image:height" content="450" />
+    <meta property="og:image:alt" content="Wedding photo with Eunki Hong and Jeongmin Lee!" />
+    <!-- Twitter -->
+    <meta name="twitter:card" content="photo" />
+    <meta name="twitter:title" content="홍은기 ❤️ 이정민 결혼식에 초대합니다" />
+    <meta name="twitter:description" content="2024년 7월 13일 토요일 오후 1시 삼성전자 서초 사옥 웨딩홀 5층" />
+    <meta name="twitter:image" content="https://drive.google.com/thumbnail?sz=w300&id=1PUc2P1pjq0xa4u0IALakBiBLA-NxjqKr" />
+    <meta name="twitter:image:alt" content="Wedding photo with Eunki Hong and Jeongmin Lee!" />
+    <meta name="twitter:creator:id" content="pichulia" />
 
     <title>홍은기 ❤️ 이정민 결혼식에 초대합니다</title>
     <link href="./styles/style_main.css" rel="stylesheet"/>
@@ -32,7 +47,7 @@
           <div class="Frame9" style="position:relative;">
             <div class="TitleText" style="font-size: 1.25rem;">홍은기   &   이정민</div>
             <div class="TitleText" style="color: #0F0F3F; font-size: 3.75rem; font-family: Ingrid Darling; margin: 2vh">Wedding Invitation</div>
-            <div class="TitleText" style="font-size: 0.94rem;">2024년 7월 13일 토요일 오후 1시<br/>삼성전자 서초 사옥 웨딩홀 5층</div>
+            <div class="TitleText" style="font-size: 0.94rem; line-height: 1.55rlh;">2024년 7월 13일 토요일 오후 1시<br/>삼성전자 서초 사옥 웨딩홀 5층</div>
           </div>
         </div>
       </div>
@@ -43,23 +58,23 @@
         <div class="header-line"></div>
         <div class="header"></div>
         <h1 class="titleText"> 초대합니다. </h1>
-          <p style="padding: 5%">
+        <p style="padding: 5%">
           조심스럽게 시작했던 작은 사랑이<br>
           어느덧 한 평생 함께할 약속이 되었습니다.<br>
           저희의 특별한 시작을 함께해주세요.
-          </p>
-          <div class="introducePerson", style="padding: 5%">
-            <div>
-              <span>(故)홍성오, 유문숙 </span>
-              <small>의 장남 </small>
-              <span>은기</span>
-            </div>
-            <div>
-              <span>이재준, 한승혜 </span>
-              <small>의 차녀 </small>
-              <span>정민</span>
-            </div>
+        </p>
+        <div class="introducePerson", style="padding: 5%">
+          <div>
+            <span>(故)홍성오, 유문숙 </span>
+            <small>의 장남 </small>
+            <span>은기</span>
           </div>
+          <div>
+            <span>이재준, 한승혜 </span>
+            <small>의 차녀 </small>
+            <span>정민</span>
+          </div>
+        </div>
         <div class="footer"></div>
       </div>
 
@@ -170,6 +185,7 @@
         <div class="rect" id="AccountBoard"></div>
         <div class="footer"></div>
       </div>
+
       <div id="account-popup" class="Pop-up-wrapper"></div>
 
       <script src="./scripts/calendar-script.js" defer></script>
