--- a/index.html
+++ b/index.html
@@ -211,6 +211,7 @@
           },
           pagination: {
             el: ".swiper-pagination",
+            clickable: true,
           },
           navigation: {
             nextEl: ".swiper-button-next",
