Reduce resource size

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
               </div>
 
               <div class="iconButtonContainer">
-                <div class="icon-button"><a href="https://naver.me/5FeZnWRl" target="_blank" rel="noopener noreferrer"><img class="icon-image" src="./resources/image/icon_naver.webp" /></a></div>
+                <div class="icon-button"><a href="https://naver.me/5FeZnWRl" target="_blank" rel="noopener noreferrer"><img class="icon-image" src="./resources/image/icon_naver.png" /></a></div>
                 <div class="icon-button"><a href="https://kko.to/tpCZwj_l0x" target="_blank" rel="noopener noreferrer"><img class="icon-image" src="./resources/image/icon_kakao.png" /></a></div>
                 <div class="icon-button"><a href="https://tmap.life/576bf240" target="_blank" rel="noopener noreferrer"><img class="icon-image" src="./resources/image/icon_tmap.jpeg" /></a></div>
                 <div class="icon-button"><a href="https://maps.app.goo.gl/EPS9zJCJDM8enhWp8" target="_blank" rel="noopener noreferrer"><img class="icon-image" src="./resources/image/icon_google.png" /></a></div>
