Append warning message
Signed-off-by: Eunki Hong <h.pichulia@gmail.com>

--- a/index.html
+++ b/index.html
@@ -172,6 +172,14 @@
                 </small>
               </span>
             </p>
+            <div style="color:#e02340; display:inline-flex; flex-direction: row; justify-content: space-between;gap:0.25rem;">
+              <div>※</div>
+              <div>
+                <small>
+                  피로연장의 최대 동시 수용 인원은 120명입니다. 본식 직후에는 혼잡할 수 있으니 <u>본식 이전(12시) 식사를 권장드립니다</u>. 감사합니다.
+                </small>
+              </div>
+            </div>
           </div>
         </div>
         <div class="footer"></div>
