--- a/debug.html
+++ b/debug.html
@@ -40,11 +40,11 @@
         <div class="header"></div>
         <section id="comments">
           <div class="comment-actions">
-            <h1 class="titleText">Comments <span id="comments-count"></span></h1>
+            <h1 class="titleText">방명록 <span id="comments-count"></span></h1>
             <a
               class="button"
-              href="https://github.com/hinohie/hinohie.github.io/issues/21"
-              >Post comment</a
+              href="https://github.com/hinohie/hinohie.github.io/issues/23"
+              >방명록 남기러 가기 (github 계정 필요)</a
             >
           </div>
           <div id="comments-wrapper">
@@ -74,7 +74,7 @@
       const fetchComments = async () => {
         try {
           const comments = await (await fetch(
-            'https://api.github.com/repos/hinohie/hinohie.github.io/issues/21/comments'
+            'https://api.github.com/repos/hinohie/hinohie.github.io/issues/23/comments'
           )).json();
           initRenderComments(comments);
         } catch (e) {
@@ -153,17 +153,6 @@
         commentsWrapper.innerHTML = '';
         commentsWrapper.appendChild(commentsList);
       }
-
-      const commentsList = document.createElement("ol");
-      commentsList.className = 'comments-list';
-      commentsList.setAttribute("aria-label", "Comments on this blog post");
-
-      commentsList.innerHTML = comments
-        .sort((comment1, comment2) => {
-          return comment1.created_at < comment2.created_at ? 1 : -1;
-        })
-        .map(comment => { /* rendering here */ })
-        .join('');
 
       const body = DOMPurify.sanitize(marked(comment.body));
       const postedByAuthor = comment.author_association === 'OWNER';
