Add link for comments
Signed-off-by: Eunki Hong <h.pichulia@gmail.com>

--- a/debug.html
+++ b/debug.html
@@ -22,22 +22,13 @@
   </head>
   <body>
     <div class="full-page">
-      <div class="content-page">
-        <div class="header-date">7 / 13</div>
-        <div class="header-line"></div>
-        <div class="header"></div>
-        <h1 class="titleText" style="border-inline: 1rem solid red;"> titleText </h1>
-          <p style="padding: 5%;border-inline: 1rem solid red;">
-          밍<br/>밍<br/>밍
-          </p>
-        <div class="footer"></div>
-      </div>
 
       <!-- Page 7 : Comments -->
       <div class="content-page">
         <div class="header-date">7 / 13</div>
         <div class="header-line"></div>
         <div class="header"></div>
+        <div>방명록의 스타일을 아직 꾸미지 않아서 날 것 입니다. 참고 바랍니다.</div>
         <section id="comments">
           <div class="comment-actions">
             <h1 class="titleText">방명록 <span id="comments-count"></span></h1>
