--- a/index.html
+++ b/index.html
@@ -202,6 +202,14 @@
         <div class="footer"></div>
       </div>
 
+      <!-- Page 6 : Comment link -->
+      <div class="content-page">
+        <div class="header-date">7 / 13</div>
+        <div class="header-line"></div>
+        <div class="header"></div>
+        <h1 class="titleText"><a href="./debug.html">방명록 구경하기</a></h1>
+        <div class="footer"></div>
+      </div>
       <div id="account-popup" class="Pop-up-wrapper"></div>
 
       <script src="./scripts/calendar-script.js" defer></script>
