Add comment for shuttle
Signed-off-by: Eunki Hong <h.pichulia@gmail.com>

--- a/index.html
+++ b/index.html
@@ -157,6 +157,11 @@
                   08:00  대구 수성구 동대구로 194 어린이회관 앞 / 15:00 회차
                 </small>
               </span>
+              <span style="line-height:0.5rlh"></span>
+              <span style="color:#3F3FBF;">※　친구들아 셔틀버스에 자리 많이 남았으니까</span>
+              <span style="color:#3F3FBF;">　　눈치보지말고 마음껏 타줘!!!</span>
+              <span style="color:#3F3FBF;">　　도시락 준비해야해서 <u>인원수를 알아야하니까</u></span>
+              <span style="color:#3F3FBF;">　　카톡으로 연락만 먼저 해줘~</span>
             </p>
 
 
