Add additional transportation information

--- a/index.html
+++ b/index.html
@@ -154,7 +154,8 @@
             <p>
               <span>셔틀버스 (대구)<br/>
                 <small>
-                  08:00  대구 수성구 동대구로 194 어린이회관 앞 / 15:00 회차
+                  08:00  대구 수성구 동대구로 194 어린이회관 앞 / 15:00 회차</br>
+                  대구 70바2434 (부림고속관광)
                 </small>
               </span>
               <span style="line-height:0.5rlh"></span>
@@ -168,7 +169,8 @@
             <p>
               <span>자가용<br/>
                 <small>
-                  삼성전자 서초사옥 주차장 (3시간 무료 주차 가능)<br/>
+                  삼성전자 서초사옥 주차장<br/>
+                  하객 주차 3시간 무료(접수대 도장 비치)<br/>
                   1층에서 지상 건물 외부 통유리 엘리베이터 이용 (5층)
                 </small>
               </span>
